# ufo-pursue-open-atlas

./: .env.example  .gitignore  DATA_CARD.md  INVENTORY.md  LICENSE  README.md  aaro-catalog.md  corrections.json  pyproject.toml  schema.md
image_audit/: audit.json  audit_with_mimo_judge.json
image_audit/fallback_mini/: _summary.json
image_audit/recheck/: _fallback_queue.json  _summary.json
mimo_processed/: _cleanup_summary.json  _corpus_run.out  _progress.json  _summary.json
mimo_processed/059uap00011/: _full.md  _meta.json  page_001.md  page_002.md  page_003.md  page_004.md  page_005.md
mimo_processed/059uap00012/: _full.md  _meta.json  page_001.md  page_002.md  page_003.md  page_004.md  page_005.md
mimo_processed/059uap00013/: _full.md  _meta.json  page_001.md  page_002.md  page_003.md  page_004.md  page_005.md  page_006.md  page_007.md
mimo_processed/18_100754_general_1946-7_vol_2/: _full.md  _meta.json  page_001.md  page_002.md  page_003.md  page_004.md  page_005.md  page_006.md  page_007.md  page_008.md  page_009.md  (+19 more)
pipeline/: apply_mini_replacements.py  recheck_images.py  run_fallback_mini.py  run_vlm_v3.py
scripts/: build_corpus_jsonl.py  build_corrections_json.py  build_parquet_shards.py  build_search_index.py  build_thumbnails.py  corpus_text_stats.py  download_all.sh  download_from_csv.py  download_videos.sh  render_emblem.py  render_pages.py  search_batch.py  search_cli.py  validate_corpus.py
web/: build_dataset_index.py  data.json  dataset.html  dataset_index.json  index.html  og-card.txt  prep_data.py  search-sw.js  search.html
(+6042 files in other folders)
